--- a/arch/arm/configs/lineageos_i9300_defconfig
+++ b/arch/arm/configs/lineageos_i9300_defconfig
@@ -1297,7 +1297,7 @@ CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_MQ_DEFAULT is not set
 # CONFIG_DM_DEBUG is not set
-CONFIG_DM_CRYPT=y
+CONFIG_DM_CRYPT=m
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
 # CONFIG_DM_CACHE is not set
@@ -1542,7 +1542,6 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 # CONFIG_TOUCHSCREEN_AR1021_I2C is not set
 CONFIG_TOUCHSCREEN_ATMEL_MXT=y
-# CONFIG_TOUCHSCREEN_ATMEL_MXT_T37 is not set
 # CONFIG_TOUCHSCREEN_AUO_PIXCIR is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_CHIPONE_ICN8318 is not set
@@ -2280,7 +2279,7 @@ CONFIG_REGULATOR_MAX77693=y
 # CONFIG_REGULATOR_TPS6507X is not set
 # CONFIG_REGULATOR_TPS6524X is not set
 CONFIG_REGULATOR_WM8994=y
-CONFIG_MEDIA_SUPPORT=y
+CONFIG_MEDIA_SUPPORT=m
 
 #
 # Multimedia core support
@@ -2294,17 +2293,17 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_CEC_EDID=y
 CONFIG_MEDIA_CONTROLLER=y
 # CONFIG_MEDIA_CONTROLLER_DVB is not set
-CONFIG_VIDEO_DEV=y
+CONFIG_VIDEO_DEV=m
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_VIDEO_V4L2=y
+CONFIG_VIDEO_V4L2=m
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-CONFIG_V4L2_MEM2MEM_DEV=y
+CONFIG_V4L2_MEM2MEM_DEV=m
 # CONFIG_V4L2_FLASH_LED_CLASS is not set
-CONFIG_VIDEOBUF2_CORE=y
-CONFIG_VIDEOBUF2_MEMOPS=y
-CONFIG_VIDEOBUF2_DMA_CONTIG=y
-CONFIG_VIDEOBUF2_VMALLOC=y
+CONFIG_VIDEOBUF2_CORE=m
+CONFIG_VIDEOBUF2_MEMOPS=m
+CONFIG_VIDEOBUF2_DMA_CONTIG=m
+CONFIG_VIDEOBUF2_VMALLOC=m
 # CONFIG_TTPCI_EEPROM is not set
 
 #
@@ -2313,22 +2312,22 @@ CONFIG_VIDEOBUF2_VMALLOC=y
 # CONFIG_MEDIA_USB_SUPPORT is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 # CONFIG_SOC_CAMERA is not set
-CONFIG_VIDEO_SAMSUNG_EXYNOS4_IS=y
-CONFIG_VIDEO_EXYNOS4_IS_COMMON=y
-CONFIG_VIDEO_S5P_FIMC=y
-CONFIG_VIDEO_S5P_MIPI_CSIS=y
-CONFIG_VIDEO_EXYNOS_FIMC_LITE=y
-CONFIG_VIDEO_EXYNOS4_FIMC_IS=y
+CONFIG_VIDEO_SAMSUNG_EXYNOS4_IS=m
+CONFIG_VIDEO_EXYNOS4_IS_COMMON=m
+CONFIG_VIDEO_S5P_FIMC=m
+CONFIG_VIDEO_S5P_MIPI_CSIS=m
+CONFIG_VIDEO_EXYNOS_FIMC_LITE=m
+CONFIG_VIDEO_EXYNOS4_FIMC_IS=m
 CONFIG_VIDEO_EXYNOS4_ISP_DMA_CAPTURE=y
 # CONFIG_VIDEO_XILINX is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
 # CONFIG_VIDEO_SAMSUNG_S5P_G2D is not set
-CONFIG_VIDEO_SAMSUNG_S5P_JPEG=y
-CONFIG_VIDEO_SAMSUNG_S5P_MFC=y
+CONFIG_VIDEO_SAMSUNG_S5P_JPEG=m
+CONFIG_VIDEO_SAMSUNG_S5P_MFC=m
 # CONFIG_VIDEO_SH_VEU is not set
 CONFIG_V4L_TEST_DRIVERS=y
-CONFIG_VIDEO_VIVID=y
+CONFIG_VIDEO_VIVID=m
 CONFIG_VIDEO_VIVID_MAX_DEVS=64
 # CONFIG_VIDEO_VIM2M is not set
 
@@ -2336,7 +2335,7 @@ CONFIG_VIDEO_VIVID_MAX_DEVS=64
 # Supported MMC/SDIO adapters
 #
 # CONFIG_CYPRESS_FIRMWARE is not set
-CONFIG_VIDEO_V4L2_TPG=y
+CONFIG_VIDEO_V4L2_TPG=m
 
 #
 # Media ancillary drivers (tuners, sensors, i2c, spi, frontends)
@@ -2433,11 +2432,11 @@ CONFIG_VIDEO_V4L2_TPG=y
 # CONFIG_VIDEO_NOON010PC30 is not set
 # CONFIG_VIDEO_M5MOLS is not set
 # CONFIG_VIDEO_S5K6AA is not set
-CONFIG_VIDEO_S5K6A3=y
+CONFIG_VIDEO_S5K6A3=m
 # CONFIG_VIDEO_S5K4ECGX is not set
 # CONFIG_VIDEO_S5K5BAF is not set
 # CONFIG_VIDEO_SMIAPP is not set
-CONFIG_VIDEO_S5C73M3=y
+CONFIG_VIDEO_S5C73M3=m
 
 #
 # Flash devices
@@ -3113,7 +3112,6 @@ CONFIG_USB_GADGETFS=y
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
-# CONFIG_USB_G_WEBCAM is not set
 # CONFIG_USB_LED_TRIG is not set
 # CONFIG_USB_ULPI_BUS is not set
 # CONFIG_UWB is not set
