--- a/arch/arm/configs/lineageos_i9300_defconfig
+++ b/arch/arm/configs/lineageos_i9300_defconfig
@@ -2641,14 +2641,14 @@ CONFIG_HDMI=y
 #
 # Console display driver support
 #
-CONFIG_DUMMY_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
+#CONFIG_DUMMY_CONSOLE=y
+#CONFIG_FRAMEBUFFER_CONSOLE=y
+#CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
-CONFIG_LOGO=y
-CONFIG_LOGO_LINUX_MONO=y
-CONFIG_LOGO_LINUX_VGA16=y
-CONFIG_LOGO_LINUX_CLUT224=y
+#CONFIG_LOGO=y
+#CONFIG_LOGO_LINUX_MONO=y
+#CONFIG_LOGO_LINUX_VGA16=y
+#CONFIG_LOGO_LINUX_CLUT224=y
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
